feat(spring-boot): upgrades spring boot to 2.7.1