@@ -13,50 +13,39 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/admin/session-registry")
 @Secured(value = AuthorityConstants.ROLE_ADMIN)
-public class SessionRegistryImplController
-{
+public class SessionRegistryImplController {
 
-	private final SessionRegistry sessionRegistry;
+    private final SessionRegistry sessionRegistry;
 
-	@Autowired
-	public SessionRegistryImplController(SessionRegistry sessionRegistry)
-	{
-		this.sessionRegistry = sessionRegistry;
-	}
+    @Autowired
+    public SessionRegistryImplController(SessionRegistry sessionRegistry) {
+        this.sessionRegistry = sessionRegistry;
+    }
 
-	@GetMapping(value = {"/users"})
-	@Secured(value = AuthorityConstants.ROLE_ADMIN)
-	public List<String> getAllUsers()
-	{
-		return sessionRegistry.getAllPrincipals().stream()
-				.filter(user -> !sessionRegistry.getAllSessions(user, false).isEmpty())
-				.map(Object::toString)
-				.collect(Collectors.toList());
-	}
+    @GetMapping(value = {"/users"})
+    @Secured(value = AuthorityConstants.ROLE_ADMIN)
+    public List<String> getAllUsers() {
+        return sessionRegistry.getAllPrincipals().stream().filter(user -> !sessionRegistry.getAllSessions(user, false).isEmpty()).map(Object::toString)
+                .toList();
+    }
 
-	@GetMapping(value = {"/active-users"})
-	@Secured(value = AuthorityConstants.ROLE_ADMIN)
-	public List<String> getActiveUsers()
-	{
-		return sessionRegistry.getAllPrincipals().stream()
-				.filter(user -> !sessionRegistry.getAllSessions(user, false).isEmpty())
-				.map(Object::toString)
-				.collect(Collectors.toList());
-	}
+    @GetMapping(value = {"/active-users"})
+    @Secured(value = AuthorityConstants.ROLE_ADMIN)
+    public List<String> getActiveUsers() {
+        return sessionRegistry.getAllPrincipals().stream().filter(user -> !sessionRegistry.getAllSessions(user, false).isEmpty()).map(Object::toString)
+                .toList();
+    }
 
 
-	@GetMapping(value = {"/active-users/{username}"})
-	@Secured(value = AuthorityConstants.ROLE_ADMIN)
-	public List<SessionInformation> getUserSessions(@PathVariable String username)
-	{
-		MyUserDetails myUserDetails = (MyUserDetails) sessionRegistry.getAllPrincipals().get(0);
-		if (myUserDetails.getUsername().equals(username))
-			return sessionRegistry.getAllSessions(myUserDetails, false);
-		return Collections.emptyList();
-	}
+    @GetMapping(value = {"/active-users/{username}"})
+    @Secured(value = AuthorityConstants.ROLE_ADMIN)
+    public List<SessionInformation> getUserSessions(@PathVariable String username) {
+        MyUserDetails myUserDetails = (MyUserDetails) sessionRegistry.getAllPrincipals().get(0);
+        if (myUserDetails.getUsername().equals(username)) return sessionRegistry.getAllSessions(myUserDetails, false);
+        return Collections.emptyList();
+    }
 }
